# PromptCraft-Robotics

./: .gitignore  README.md
chatgpt_airsim/: README.md  airsim_wrapper.py  app.py  chatgpt_airsim.py  config.json  environment.yml  requirements.txt  settings.json  web_ui_chatgpt_airsim.py
chatgpt_airsim/prompts/: airsim_basic.txt
chatgpt_airsim/system_prompts/: airsim_basic.txt
chatgpt_airsim/templates/: index.html
chatgpt_ros2/src/sjtu_drone/sjtu_drone_bringup/: package.xml  setup.cfg  setup.py
chatgpt_ros2/src/sjtu_drone/sjtu_drone_bringup/launch/: sjtu_drone_bringup.launch.py  sjtu_drone_gazebo.launch.py
chatgpt_ros2/src/sjtu_drone/sjtu_drone_bringup/rviz/: rviz.rviz
chatgpt_ros2/src/sjtu_drone/sjtu_drone_bringup/sjtu_drone_bringup/: spawn_drone.py
chatgpt_ros2/src/sjtu_drone/sjtu_drone_description/: .gitignore  CMakeLists.txt  README.md  package.xml
chatgpt_ros2/src/sjtu_drone/sjtu_drone_description/include/: pid_controller.h  plugin_drone.h
chatgpt_ros2/src/sjtu_drone/sjtu_drone_description/models/: database.config
chatgpt_ros2/src/sjtu_drone/sjtu_drone_description/models/sjtu_drone/: model.config  quadrotor_4.dae  quadrotor_4.stl  sjtu_drone.sdf
chatgpt_ros2/src/sjtu_drone/sjtu_drone_description/src/: pid_controller.cpp  plugin_drone.cpp
chatgpt_ros2/src/sjtu_drone/sjtu_drone_description/urdf/: sjtu_drone.urdf  sjtu_drone.urdf.xacro
chatgpt_ros2/src/sjtu_drone/sjtu_drone_description/worlds/: playground.world
examples/aerial_robotics/: airsim_solarpanel_inspection.md  airsim_turbine_inspection.md  tello_example.md
examples/basic_robotics/: problems.md
examples/embodied_agents/: airsim_objectnavigation.md  visual_language_navigation.md  visual_language_navigation_1.md  visual_language_navigation_2.md
examples/manipulation/: manipulation_tasks.md  manipulation_zeroshot.md  pick_stack_msft_logo.md
examples/multiple_robots/: multiple_robots.md
examples/perception_action/: airsim_objectnavigation.md  airsim_obstacleavoidance.md
examples/spatial_temporal_reasoning/: visual_servoing_basketball.md
